<resources>
    <string name="app_name">Яфина</string>
    <string name="balance_title">Ваш баланс:</string>
    <string name="rur_default_balance">123456.00 RUR</string>
    <string name="usd_default_balance">5555.13 USD</string>

    <string name="app_version">Версия 0.01</string>
    <string name="app_description">Ваш персональный финансовый трекер</string>

    <string name="income_articles_title">СТАТЬИ ДОХОДА</string>
    <string name="outcome_articles_title">СТАТЬИ РАСХОДА</string>
    <string name="accounts_title">ВАШИ СЧЕТА</string>

    <string name="not_enough_money_notification">Недостаточно средств на счету "%1$s"! В наличии %2$s, требуется %3$s</string>
    <string name="zero_money_notification">Недостаточно средств на счете "%1$s"! В наличии %2$s</string>
    <string name="max_sum_on_account_hint">Максимум средств на счете %1$.2f %2$s</string>

    <string name="enter_sum_prompt">Введите сумму:</string>
    <string name="button_title_ok">OK</string>
    <string name="button_title_cancel">ОТМЕНА</string>
    <string name="repeatable_transaction">Повторяемая транзакция</string>
    <string name="account_name">Имя аккаунта</string>
    <string name="currency">Валюта</string>
    <string name="account_description">Описание</string>
    <string name="add_account">Добавить аккаунт</string>
    <string name="save">Сохранить</string>
    <string name="article_title">Название статьи</string>
    <string name="article_description">Описание</string>
    <string name="article_type">Тип</string>
    <string name="operations">Операции и карты</string>
    <string name="transactions">Транзакции</string>
    <string name="charts">Отчеты</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>
    <string name="choose_currency">Выберите валюту</string>
    <string name="choose_account">Выберите счет</string>
    <string name="wrong">Остались незаполенными поля</string>
    <string name="default_comment">Комментарий по умолчанию…</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="incomings">Доходы</string>
    <string name="outgoings">Расходы</string>
    <string name="transition">Перевод</string>
    <string name="comment">Комментарий</string>
</resources>
