<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_operations"
        android:icon="@drawable/ic_in_out_white_24dp"
        android:title="@string/operations" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/transactions" />

    <item
        android:id="@+id/navigation_balance"
        android:icon="@drawable/ic_pie_chart_white_24dp"
        android:title="@string/charts" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/about" />

</menu>
